_rendered/apps/bitwarden/admissionregistration_k8s_io-validatingwebhookconfiguration-externalsecret-validate.yaml
# Source: bitwarden/charts/external-secrets/templates/validatingwebhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: externalsecret-validate
  labels:
    
    helm.sh/chart: external-secrets-2.8.0
    app.kubernetes.io/name: external-secrets-webhook
    app.kubernetes.io/instance: bitwarden
    app.kubernetes.io/version: "v2.8.0"
    app.kubernetes.io/managed-by: Helm
    external-secrets.io/component: webhook
webhooks:
- name: "validate.externalsecret.external-secrets.io"
  rules:
  - apiGroups:   ["external-secrets.io"]
    apiVersions: ["v1"]
    operations:  ["CREATE", "UPDATE", "DELETE"]
    resources:   ["externalsecrets"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: bitwarden
      name: external-secrets-webhook
      path: /validate-external-secrets-io-v1-externalsecret
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
  failurePolicy: Fail
